# aircraft-tire

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  slide.html  test_upload.py
.claude/: launch.json
.github/workflows/: deploy-containers.yml  deploy.yml  infra-destroy.yml  infra.yml
3d-reconstructor/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pytest.ini  requirements.txt
3d-reconstructor/app/: __init__.py  config.py  domain.py  job_store.py  main.py  schemas.py
3d-reconstructor/app/routes/: health.py  reconstructions.py  uploads.py
3d-reconstructor/app/services/: colmap.py  glb.py  mast3r_reconstructor.py  uploads.py
3d-reconstructor/tests/: test_app_boot.py  test_colmap_service.py  test_upload_service.py
app/: .dockerignore  .env.example  Dockerfile  Makefile  __init__.py  config.py  main.py  pyproject.toml
app/api/: errors.py
app/api/routes/: crack_detector.py  rul.py  tire_assessment.py  tire_image.py  tire_rul.py  tire_simulation.py  wear_severity.py
app/calibration/: __init__.py  artifacts.py  dataset.py  physical_benchmark.py  promotion.py  schemas.py  validation.py
app/config/: __init__.py  config.yaml
app/domain/: assessment_schemas.py  governance_schemas.py  model_parameter_schemas.py  schemas.py  simulation_schemas.py  tire_image_schemas.py
app/integrations/roboflow/: __init__.py  controller.py  manager.py  tread_depth_enums.py
app/model_releases/pilot-sim-2.0.0/: manifest.yaml  parameters.json
app/rul/: constants.py  generate_defect_logs.py  generate_scans.py  paths.py  scoring.py  train.py
app/rul/agent/: __init__.py  core.py  tools.py
app/rul/cv/: __init__.py  assess.py
app/rul/grounding/: defect_logs.py
app/services/: agent_service.py  assessment_gate.py  circle_analysis_service.py  fleet_tires_service.py  model_config.py  model_registry.py  rul_service.py  safety_policy.py  tire_assessor.py  tire_image_service.py  tire_rul_service.py  tire_simulator.py  wear_calculator.py
app/static/: demo.css  demo.html  demo.js
app/tire_rul/: __init__.py  app.py  config.py  enrich_tire_assets.py  evaluation.py  features.py  generate_data.py  generate_defect_logs.py  generate_scans.py  mock_tyres_assets.py  paths.py  ruff.toml  scan_annotations.py  scoring.py
app/tire_rul/agent/: __init__.py  core.py  tools.py
app/tire_rul/artifacts/: eval_report.json  lightgbm.txt  shap_values.parquet
app/tire_rul/cv/: __init__.py  assess.py  images.py
app/tire_rul/data/: inspection_records.parquet  operational_cycles.parquet  station_stock.parquet  tires.parquet  wheel_positions.parquet
app/tire_rul/grounding/: __init__.py  amm.py  mel.py
artifacts/: mixedlm_covariance.pkl  weibull_aft.pkl
assets/mock-tyres/: annotate_cut.py  cut_grid.py  draw_annotations.py
assets/mock-tyres/release/: s3-manifest.json
config/: generator.yaml  knowledge.yaml  thresholds.yaml
craft-detector-service/: .env.example  Dockerfile  Makefile  pyproject.toml
craft-detector-service/app/: main.py
craft-detector-service/app/api/: errors.py
craft-detector-service/app/config/: __init__.py  config.yaml
craft-detector-service/app/domain/: __init__.py  schemas.py
craft-detector-service/app/rul/: app.py  paths.py
craft-detector-service/app/services/: __init__.py  tire_simulator.py  wear_calculator.py
craft-detector-service/app/static/: demo.html
craft-detector-service/tests/: conftest.py  test_health.py  test_validation.py
data/: _ground_truth.parquet  aircraft.parquet  defect_logs.parquet  fleets.parquet  tire_scans.parquet  tires.parquet
docs/: ARCHITECTURE.md  DATA_SOURCES.md  PLAN.md  RESEARCH.md  SOLUTION.md  aircraft-tire-forecasting-research.md  demo_script.md  fleet-calibration-data-contract.md  model-governance.md  public-physical-benchmarks.md  simulation-api-v2.md  tire-assessment-api.md  validation-target-b737-800-apr04450.md
gradio-app/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  compose.yaml  requirements.txt
gradio-app/pipeline/: __init__.py  annotate.py  config.py  detector.py  glb.py  projector.py  reconstructor_client.py  runner.py
gradio-app/tests/: test_projector.py  test_reconstructor_client.py
infra/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/alb/: main.tf  outputs.tf  variables.tf
infra/modules/ecr/: main.tf
infra/modules/ecs/: main.tf  outputs.tf  variables.tf
infra/modules/github_oidc/: main.tf  outputs.tf  variables.tf
infra/modules/gpu_capacity/: main.tf  outputs.tf  variables.tf
scripts/: sync_mock_tyres_s3.py
src/: app.py  generate_data.py  generate_defect_logs.py  generate_scans.py  paths.py
src/agent/: __init__.py  core.py  tools.py
src/cv/: __init__.py  assess.py
src/grounding/: __init__.py  amm.py  mel.py
tests/: conftest.py  test_agent.py  test_agent_api.py  test_calculator.py  test_calculator_api.py  test_calibration_dataset.py  test_calibration_validation.py  test_cors.py  test_cv.py  test_demo_ui.py  test_evaluation.py  test_features.py  test_generator.py  test_grounding.py  test_health.py  test_mock_tyres_s3.py  test_model_registry.py  test_physical_benchmark.py  test_roboflow_api.py  test_rul_api.py  test_scan_annotations.py  test_scoring.py  test_tire_assessment.py  test_tire_rul_api.py  test_tire_simulation.py
web/: .dockerignore  .harness-id  Dockerfile  LANDING_ENGINE_PLAN.md  README.md  SIMULATE_LANDING.md  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/public/: radial.glb  scratched-radial-tyre.glb  tire.glb  type_iii.glb  type_vii.glb
web/src/: Aircraft.tsx  AnnotatedScanImage.tsx  App.tsx  EngineerChat.tsx  Forecast.tsx  SimulateLanding.tsx  TireCards.tsx  TireImageCard.tsx  TireViewer.tsx  TrackMap.tsx  Tyres.tsx  agentApi.ts  airports.ts  assessment.check.ts  assessment.ts  charts.tsx  data.check.ts  data.ts  index.css  landingEngine.check.ts  landingEngine.ts  md.tsx  mock.ts  sim.check.ts  sim.ts  tracks.ts  ui.tsx  uploadApi.ts
(+35 files in other folders)
