[project]
name = "wear-severity-api"
version = "1.0.0"
description = "Aircraft tire wear-severity calculator API"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    # Runtime for the RUL AI endpoint (app.rul.scoring is pure-numpy; config loads YAML).
    "numpy>=1.26,<2.1",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
# Full AI/ML stack: data generation, model training, CV, the LLM agent, and the Streamlit UI.
# NOT needed to serve /api/v1/rul/predict (that path only needs numpy + pyyaml, in base deps).
# Install with: `uv sync --extra ai`.
ai = [
    "numpy>=1.26,<2.1",
    "pyyaml>=6.0,<7.0",
    "pandas>=2.0,<2.3",
    "pyarrow>=14",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "lifelines>=0.27",
    "lightgbm>=4.1",
    "shap>=0.44",
    "plotly>=5.18",
    "streamlit>=1.49",
    "pillow>=10.0",
    "openai>=1.30",
    "anthropic[bedrock]>=0.40",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "mypy>=1.14.0,<2.0.0",
    "pytest>=8.3.0,<10.0.0",
    "pytest-asyncio>=0.25.0,<2.0.0",
    "ruff>=0.9.0,<1.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

# The AI research-pipeline tests are vendored at the AI package's original 120-char style
# (see app/rul/ruff.toml). Backend tests follow the root style.
[tool.ruff.lint.per-file-ignores]
"tests/test_agent.py" = ["E501"]
"tests/test_cv.py" = ["E501"]
"tests/test_evaluation.py" = ["E501"]
"tests/test_features.py" = ["E501"]
"tests/test_generator.py" = ["E501"]
"tests/test_grounding.py" = ["E501"]
"tests/test_scoring.py" = ["E501"]

[tool.ruff.format]
exclude = [
    "app/rul/**",
    "tests/test_agent.py",
    "tests/test_cv.py",
    "tests/test_evaluation.py",
    "tests/test_features.py",
    "tests/test_generator.py",
    "tests/test_grounding.py",
    "tests/test_scoring.py",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
pretty = true
show_error_codes = true
# The backend (app.main/api/domain/services/config) is strict-typed. app.rul is vendored
# research/ML code with a different quality bar — excluded from strict checks below.
exclude = ["^app/rul/"]

[[tool.mypy.overrides]]
# Do not strict-check the AI package, and treat its symbols as untyped when imported
# from the backend seam (app.services.rul_service).
module = ["app.rul.*"]
ignore_errors = true
follow_imports = "skip"
