[project]
name = "aircraft-tire-assessment-api"
version = "1.0.0"
description = "Fail-closed aircraft tire assessment and scenario-planning API"
readme = "docs/tire-assessment-api.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "inference-sdk>=0.9.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "mypy>=1.14.0,<2.0.0",
    "pytest>=8.3.0,<10.0.0",
    "pytest-asyncio>=0.25.0,<2.0.0",
    "ruff>=0.9.0,<1.0.0",
    "types-PyYAML>=6.0.0,<7.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["inference_sdk.*"]
ignore_missing_imports = true
